# 1208_DeepResearchProj

./: main.py  pyproject.toml
app/: main.py
app/agents/: research_agent.py
app/background/: __init__.py  research_tasks.py
app/config/: config.py
app/repository/: mongodb.py  report_repository.py  research_project_repository.py  research_task_repository.py
app/routers/: __init__.py
app/schema/: __init__.py
app/tools/: external_search.py  ragflow_search.py  render_html.py  research_agent_tool.py  storage_tool.py  web_page_read.py
deepagents_demo_file/: filesystem_backend_demo.py  statebackend_demo.py  store_backend_demo.py  subagent_demo.py  subagent_demo_2.py
test/: test_create_deep_agent.py
