[project]
name = "deepresearchproj"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deepagents>=0.6.8",
    "fastapi>=0.136.3",
    "langchain>=1.3.8",
    "langchain-deepseek>=1.1.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pymongo>=4.17.0",
]
